# target-permutation-importances

./: .coverage  .gitignore  CONTRIBUTING.md  Makefile  README.md  Readme.md  mkdocs.yml  pyproject.toml  readthedocs.yaml
.github/workflows/: main.yaml  pull.yaml  release.yaml
benchmarks/: process_result_csv.py  results.md  run.py  run_tabular_benchmark.py  tabular_benchmark.py
benchmarks/results/: processed_CatBoostClassifier_tabular_benchmark.csv  processed_CatBoostRegressor_tabular_benchmark.csv  processed_LGBMClassifier_tabular_benchmark.csv  processed_LGBMRegressor_tabular_benchmark.csv  processed_RandomForestClassifier_tabular_benchmark.csv  processed_RandomForestRegressor_tabular_benchmark.csv  processed_XGBClassifier_tabular_benchmark.csv  processed_XGBRegressor_tabular_benchmark.csv  random_forest_tabular_benchmark copy.csv  random_forest_tabular_benchmark.csv  random_forest_tabular_benchmark_processed.csv  stat.csv  tabular_benchmark copy 2.csv  tabular_benchmark copy.csv  tabular_benchmark.csv  tabular_benchmark_.csv  task_stat.csv  xgboost_tabular_benchmark.csv
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
docs/: benchmarks.md  index.md  reference.md
docs/javascripts/: katex.js
target-permutation-importance/: __init__.py
target_permutation_importance/: __init__.py
target_permutation_importances/: __init__.py  class_wrapper.py  functional.py  sklearn_wrapper.py  typing.py
tests/: test_class.py  test_compute.py  test_compute_cuml.py  test_functional.py  test_sklearn_wrapper.py
