[project]
name = "target-permutation-importances"
version = "1.0.9"
description = "Compute (Target) Permutation Importances of a machine learning model"
authors = [{name = "Anthony Chiu", email = "kingychiu@gmail.com"}]
maintainers = [{name = "Anthony Chiu", email = "kingychiu@gmail.com"}]
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE.txt"}
keywords = ["feature selection", "feature ranking", "feature importances", "kaggle", "machine learning"]

[tool.poetry]
name = "target-permutation-importances"
version = "1.0.9"
description = "Compute (Target) Permutation Importances of a machine learning model"
authors = ["Anthony Chiu <kingychiu@gmail.com>"]
maintainers = ["Anthony Chiu <kingychiu@gmail.com>"]
readme = "README.md"
packages = [{include = "target_permutation_importances"}]
homepage = "https://github.com/kingychiu/target-permutation-importances"
repository = "https://github.com/kingychiu/target-permutation-importances"
documentation = "https://target-permutation-importances.readthedocs.io/en/latest/"

[project.urls]
Repository = "https://github.com/kingychiu/target-permutation-importances" 
Homepage = "https://github.com/kingychiu/target-permutation-importances"
Documentation = "https://target-permutation-importances.readthedocs.io/en/latest/"

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.21.0"
pandas = "^1.5.3"
tqdm = "^4.48.2"


[tool.poetry.group.dev.dependencies]
ruff = "^0.0.275"
black = "^23.3.0"
isort = "^5.12.0"
mypy = "^1.4.1"
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
datasets = "^2.13.1"
scikit-learn = "^1.3.0"
pandas-stubs = "^2.0.2.230605"
types-tqdm = "^4.65.0.1"
xgboost = "^1.7.6"
catboost = "^1.2"
cmake = "^3.26.4"
lightgbm = "^3.3.5"
coverage-badge = "^1.1.0"
twine = "^4.0.2"
mkdocs = {extras = ["python"], version = "^1.4.3"}
mkdocstrings = "^0.22.0"
mkdocstrings-python = "^1.1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
line-length = 256